<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cirrus One</string>
    <string name="btn_inventory">Run Inventory</string>
    <string name="item_tag">INVENTORY</string>
    <string name="item_config">CONFIG</string>
    <string name="item_about">ABOUT</string>
    <string name="item_quit">X</string>
    <string name="epc_title">EPC</string>
    <string name="epc_submit">Set</string>
    <string name="epc_length">EPC Length</string>
    <string name="epc_new">New EPC</string>
    <string name="pwd_title">Password</string>
    <string name="pwd_get">Get</string>
    <string name="pwd_set">Set</string>
    <string name="pwd_new">Password</string>
    <string name="lock_title">Lock</string>
    <string name="lock_submit">Set</string>
    <string name="kill_pwd">Kill Pwd</string>
    <string name="kill_pwd_prompt">Choose a  Kill Password Permission</string>
    <string name="access_pwd">Access Pwd</string>
    <string name="access_pwd_prompt">Choose an Access Password Permission</string>
    <string name="epc_mem_bank">EPC Mem Bank</string>
    <string name="epc_mem_bank_prompt">Choose a EPC Memory Bank Permission</string>
    <string name="tid_mem_bank">TID Mem Bank</string>
    <string name="tid_mem_bank_prompt">Choose a TID Memory Bank Permission</string>
    <string name="user_mem_bank">User Mem Bank</string>
    <string name="user_mem_bank_prompt">Choose a User Memory Bank Permission</string>
    <string name="kill_title">Kill</string>
    <string name="kill_submit">Kill</string>
    <string name="dlg_epc_length_title">EPC Length Error</string>
    <string name="dlg_epc_length_message">The EPC length must between 1 to 27</string>
    <string name="dlg_epc_new_title">New EPC Error</string>
    <string name="dlg_epc_new_message">The length of the new EPC must correspond to the EPC Length</string>
    <string name="dlg_lock_title">Lock Tag Error</string>
    <string name="dlg_pwd_title">Change Password Error</string>
    <string name="dlg_kill_title">Kill Tag Error</string>
    <string name="cfg_title">Reader Configuration</string>
    <string name="cfg_region">Region</string>
    <string name="cfg_dlg_region_title">Choose a Region</string>
    <string name="cfg_tag_mode">Tag Mode</string>
    <string name="cfg_dlg_tage_mode_title">Choose a Tag Mode</string>
    <string name="cfg_rf_conf">RF Configuration</string>
    <string name="cfg_pwr_level">Power Level</string>
    <string name="cfg_dwell_time">Scan Time (ms)</string>
    <string name="cfg_number_inventory_cycles">Inventory Cycles</string>
    <string name="cfg_antenna_port">Antenna Port</string>
    <string name="cfg_gen2">Gen2 Configuration</string>
    <string name="cfg_selected_flag">Selected Flag</string>
    <string name="cfg_session">Session</string>
    <string name="cfg_link_profile">Link Profile</string>
    <string name="cfg_singulation_algorithm">Singulation Algorithm</string>
    <string name="cfg_q_algorithm">Algorithm</string>
    <string name="cfg_q_value">Q Value</string>
    <string name="cfg_dynamic_q">Dynamic Q</string>
    <string name="cfg_retry_count">Retry Count</string>
    <string name="cfg_toggle_target">Toggle Target</string>
    <string name="cfg_repeat_until_no_tags">Repeat Until No Tags</string>
    <string name="cfg_bluetooth_control">Bluetooth Control</string>
    <string name="cfg_localsocket_control">LocalSocket Control</string>
    <string name="cfg_scan_autostart">Scan Autostart</string>
    <string name="cfg_target">Target</string>
    <string name="cfg_start_qvalue">Start Q Value</string>
    <string name="cfg_min_qvalue">Minimum Q Value</string>
    <string name="cfg_max_qvalue">Maximum Q Value</string>
    <string name="cfg_threshold_multiplier">Threshold Multiplier</string>
    <string name="btn_set">Set</string>
    <string name="btn_get">Get</string>
    <string name="about_title">Encinitas Labs WiRFID Cirrus One</string>
    <string name="about_company">Manufacturer</string>
    <string name="about_company_sum">Encinitas Laboratories Inc.</string>
    <string name="about_address">Address</string>
    <string name="about_address_sum">1310 Ravean Court, Encinitas, CA 92024</string>
    <string name="about_tel">Phone Number</string>
    <string name="about_tel_sum">+1 760 651 2402</string>
    <string name="about_web">Web Site</string>
    <string name="about_web_sum">http://www.encinitaslabs.com</string>
    <string name="about_sw_ver">Software Version</string>
    <string name="about_sw_ver_sum">0.2.78 tag tester</string>
    <string name="cfg_misc">Miscellaneous</string>
    <string name="cfg_interval_delay">Interval Between Scans (ms)</string>
    <string name="cfg_ping_delay">Ping Interval (s)</string>
    <string name="cfg_web_url">Web Url</string>
    <string name="cfg_wss_url">Websocket Url</string>
    <string name="readwrite_title">Read / Write</string>
    <string name="read_submit">Read</string>
    <string name="write_submit">Write</string>
    <string name="memory_bank">Memory Bank</string>
    <string name="memory_bank_prompt">Choose a Memory Bank</string>
    <string name="readwrite_offset">Offset</string>
    <string name="readwrite_length">Length</string>
    <string name="readwrite_data">Data</string>
    <string name="epc_length_hint">Enter EPC length between 1 to 27</string>
    
</resources>
