<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:scrollbars="vertical" android:scrollbarStyle="insideOverlay">

	<ScrollView
	    android:id="@+id/scrollView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <LinearLayout
	        android:id="@+id/scrollLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <FrameLayout
	            android:id="@+id/tagidLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >

	            <TextView
	                android:id="@+id/tv_tagid"
	                style="@style/TextViewFontSmall" />
	        </FrameLayout>

	        <View style="@style/dividerLine" />

	        <LinearLayout
	            android:id="@+id/epcLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:id="@+id/epcTitleLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/tv_epctitle"
	                    style="@style/TextViewFontSmall.3wt"
	                    android:text="@string/epc_title" />

	                <Button
	                    android:id="@+id/btn_epc"
	                    style="@style/ButtonFontSmall"
	                    android:onClick="onEpcClick"
	                    android:text="@string/epc_submit" />
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/epcLengthLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_epclength"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/epc_length" />

	                <EditText
	                    android:id="@+id/et_epclength"
	                    style="@style/EditTextFontSmall"
	                    android:hint="@string/epc_length_hint"
	                    android:maxLength="2"
				        android:inputType="number"
				        android:digits="0123456789">
	                </EditText>
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/pecNewLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_epcnew"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/epc_new" />

	                <EditText
	                    android:id="@+id/et_epcnew"
	                    style="@style/EditTextFontSmall" />
	            </LinearLayout>
	        </LinearLayout>

	        <View style="@style/dividerLine" />

	        <LinearLayout
	            android:id="@+id/pwdLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:id="@+id/pwdTitleLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/tv_pwd"
	                    style="@style/TextViewFontSmall.2wt"
	                    android:text="@string/pwd_title" />

	                <Button
	                    android:id="@+id/btn_get_pwd"
	                    style="@style/ButtonFontSmall"
	                    android:text="@string/pwd_get" />

	                <Button
	                    android:id="@+id/btn_set_pwd"
	                    style="@style/ButtonFontSmall"
	                    android:text="@string/pwd_set" />
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/pwdNewLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_pwdnew"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/pwd_new" />

	                <EditText
	                    android:id="@+id/et_pwdnew"
	                    style="@style/EditTextFontSmall"
	                    android:digits=" 0123456789abcdefABCDEF"
	                    android:maxLength="8" />
	            </LinearLayout>
	        </LinearLayout>

	        <View style="@style/dividerLine" />
	        
	        <LinearLayout
	            android:id="@+id/readWriteLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:id="@+id/readWriteTitleLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/tv_readwritetitle"
	                    style="@style/TextViewFontSmall.2wt"
	                    android:text="@string/readwrite_title" />

	                <Button
	                    android:id="@+id/btn_read"
	                    style="@style/ButtonFontSmall"
	                    android:text="@string/read_submit" />

	                <Button
	                    android:id="@+id/btn_write"
	                    style="@style/ButtonFontSmall"
	                    android:text="@string/write_submit" />
	                </LinearLayout>

	            <LinearLayout
	                android:id="@+id/memoryBankLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_memorybank"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/memory_bank" />

	                <Spinner
	                    android:id="@+id/sp_memorybank"
	                    style="@style/SpinnerFontSmall"
	                    android:prompt="@string/memory_bank_prompt" />
	            </LinearLayout>
	            
	            <LinearLayout
	                android:id="@+id/readWriteOffsetLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_readwriteoffset"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/readwrite_offset" />

	                <EditText
	                    android:id="@+id/et_readwriteoffset"
	                    style="@style/EditTextFontSmall"
	                    android:maxLength="2"
						android:inputType="number"
						android:digits="0123456789"
						android:text="0">
	                    <requestFocus />
	                </EditText>
	            </LinearLayout>
	            
	            <LinearLayout
	                android:id="@+id/readWriteLengthLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_readwritelength"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/readwrite_length" />

	                <EditText
	                    android:id="@+id/et_readwritelength"
	                    style="@style/EditTextFontSmall"
	                    android:maxLength="2"
				        android:inputType="number"
				        android:digits="0123456789"
				        android:text="1">
	                    <requestFocus />
	                </EditText>
	            </LinearLayout>
	            	            	            
	            <LinearLayout
	                android:id="@+id/readWriteDataLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_readwritedata"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/readwrite_data" />
	                
	                <EditText
	                    android:id="@+id/et_readwritedata"
	                    style="@style/EditTextFontSmall"
	                    android:digits=" 0123456789abcdefABCDEF"
	                    android:gravity="top|left"
	                    android:singleLine="false" 
	                    android:lines="2" />
	            </LinearLayout>

	        </LinearLayout>

	        <View style="@style/dividerLine" />
	        
	        
	        <LinearLayout
	            android:id="@+id/lockLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:id="@+id/lockTitleLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/tv_locktitle"
	                    style="@style/TextViewFontSmall.3wt"
	                    android:text="@string/lock_title" />

	                <Button
	                    android:id="@+id/btn_lock"
	                    style="@style/ButtonFontSmall"
	                    android:text="@string/lock_submit" />
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/killPwdLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_killpwd"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/kill_pwd" />

	                <Spinner
	                    android:id="@+id/sp_killpwd"
	                    style="@style/SpinnerFontSmall"
	                    android:prompt="@string/kill_pwd_prompt" />
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/accessPwdLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_accesspwd"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/access_pwd" />

	                <Spinner
	                    android:id="@+id/sp_accesspwd"
	                    style="@style/SpinnerFontSmall"
	                    android:prompt="@string/access_pwd_prompt" />
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/epcMemBankLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_epcmembank"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/epc_mem_bank" />

	                <Spinner
	                    android:id="@+id/sp_epcmembank"
	                    style="@style/SpinnerFontSmall"
	                    android:prompt="@string/epc_mem_bank_prompt" />
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/tidMemBankLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_tidmembank"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/tid_mem_bank" />

	                <Spinner
	                    android:id="@+id/sp_tidmembank"
	                    style="@style/SpinnerFontSmall"
	                    android:prompt="@string/tid_mem_bank_prompt" />
	            </LinearLayout>

	            <LinearLayout
	                android:id="@+id/userMemBankLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/tv_usermembank"
	                    style="@style/TextViewFontSmall.1wt"
	                    android:text="@string/user_mem_bank" />

	                <Spinner
	                    android:id="@+id/sp_usermembank"
	                    style="@style/SpinnerFontSmall"
	                    android:prompt="@string/user_mem_bank_prompt" />
	            </LinearLayout>
	        </LinearLayout>

	        <View style="@style/dividerLine" />

	        <LinearLayout
	            android:id="@+id/killLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:id="@+id/killTitleLayout"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/tv_killtitle"
	                    style="@style/TextViewFontSmall.3wt"
	                    android:text="@string/kill_title" />

	                <Button
	                    android:id="@+id/btn_kill"
	                    style="@style/ButtonFontSmall"
	                    android:text="@string/kill_submit" />
	            </LinearLayout>
	        </LinearLayout>

	        <View style="@style/dividerLine" />

	    </LinearLayout>
	</ScrollView>

</LinearLayout>
